logs/picker.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/picker'...
Listing './lib/python3.5/site-packages/picker/contrib'...
Compiling './lib/python3.5/site-packages/picker/contrib/feedparser.py'...
***   File "./lib/python3.5/site-packages/picker/contrib/feedparser.py", line 236
    raise AttributeError, "object has no attribute '%s'" % key
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/picker/league'...
Listing './lib/python3.5/site-packages/picker/league/nfl'...
Compiling './lib/python3.5/site-packages/picker/league/nfl/scores.py'...
***   File "./lib/python3.5/site-packages/picker/league/nfl/scores.py", line 160
    except Exception, why:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/picker/management'...
Listing './lib/python3.5/site-packages/picker/management/commands'...
Compiling './lib/python3.5/site-packages/picker/management/commands/picker.py'...
***   File "./lib/python3.5/site-packages/picker/management/commands/picker.py", line 43
    print '*** Unable to retrieve data'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/picker/templatetags'...
Listing './lib/python3.5/site-packages/picker/tests'...
Compiling './lib/python3.5/site-packages/picker/tests/test_picker.py'...
***   File "./lib/python3.5/site-packages/picker/tests/test_picker.py", line 14
    password='password'
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/picker-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
